--- a/.mozilla/firefox/stylesheets/chrome/oneliner.css
+++ b/.mozilla/firefox/stylesheets/chrome/oneliner.css
@@ -1,12 +1,10 @@
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/navbar_tabs_responsive_oneliner.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
+See the above repository for updates as well as full license text.
 
-/* Make tabs and navbar appear side-by-side tabs on right */
+Modified by me
+*/
 
-/* Use page_action_buttons_on_hover.css to hide page-action-buttons to save more space for the address */
-
-/* Toolbars will be shown normally if window width goes below the value below */
-
+/* Make tabs and navbar appear side-by-side with tabs on right */
 
 
 /* Modify it to suit your needs */
@@ -20,7 +18,7 @@ See the above repository for updates as well as full license text. */
 
   /* Modify these to change relative widths or default height */
   #navigator-toolbox{
-    --uc-navigationbar-width: 40vw;
+    --uc-navigationbar-width: 50vw; /* length of urlbar container */
     --uc-toolbar-height: 40px;
     --uc-urlbar-min-width: 50vw; /* minimum width for opened urlbar */
   }
